# wispr-flow-clone

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs
